--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+}
+
+checkstyle {
+    toolVersion = '11.0.1'  // Use latest stable version or your preferred one
+    configFile = file('config/checkstyle/checkstyle.xml')  // Path to your Checkstyle config
 }
 
 repositories {
@@ -28,11 +34,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("cortana.core.Cortana")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "cortana"
     archiveClassifier = null
 }
 
